<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EZbudget</string>
    <string name="action_settings">Settings</string>

    <string name="debits">Debits</string>
    <string name="credits">Credits</string>

    <string name="add_debit">Add Debit</string>
    <string name="add_credit">Add Credit</string>

    <string name="desc">Description</string>
    <string name="amt">Amount</string>
    <string name="date">Date</string>

    <string name="selectCat">Select a Category...</string>
    <string name="error">Error</string>

    <string name="bill">Bill</string>
    <string name="groceries">Groceries</string>
    <string name="dining">Dining</string>
    <string name="alcohol">Alcohol</string>
    <string name="tobacco">Tobacco</string>
    <string name="medical">Medical</string>
    <string name="entertainment">Entertainment</string>
    <string name="hobby">Hobby</string>

    <string name="other">Other</string>

    <string name="paycheck">Paycheck</string>
    <string name="grant">Grant</string>
    <string name="gift">Gift</string>
    <string name="annuity">Annuity</string>


    <string name="notRecurring">Not Recurring</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="biweekly">Biweekly</string>
    <string name="monthly">Monthly</string>
    <string name="bimonthly">Bimonthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="twiceAnnually">Twice Annually</string>
    <string name="annually">Annually</string>

    <string name="ok">OK</string>
    <string name="catError">Please select a transaction category.</string>
    <string name="amtError">Please enter an amount.</string>

    <string name="loginTitle">Login or Create User</string>
    <string name="loginCreateError">Please login or create user.</string>

    <string name="nameLabel">Name</string>
    <string name="passwordLabel">Password</string>
    <string name="repeatPasswordLabel">Password (on create)</string>
    <string name="emailLabel">Email (on create)</string>

    <string name="create">Create</string>
    <string name="login">Login</string>

    <string name="noNameError">Please enter your name.</string>
    <string name="noEmailError">Please enter your email.</string>
    <string name="noPasswordError">Please enter a password.</string>
    <string name="noRepasswordError">Please re-type your password.</string>

    <string name="unknownError">Unknown error occurred,</string>

    <string name="passwordMismatchError">Passwords do not match.</string>

    <string name="noInternetError">You do not appear to be connected to the internet.</string>
    <string name="invalidEmailError">Email is invalid.</string>
    <string name="nameTakenError">Name is taken.</string>
    <string name="emailTakenError">Email is taken.</string>

    <string name="invalidCredentialsError">Credential are invalid.</string>

    <string name="logout">Logout</string>
    <string name="stats">Statistics</string>
    <string name="edituser">Edit User Info</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="editTrans">Edit Transaction</string>

    <string name="deleteTransConfirm">Delete transaction?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="total">Total: $</string>
    <string name="perDay">Per Day: $</string>
    <string name="perWeek">Per Week: $</string>
    <string name="perMonth">Per Month: $</string>
    <string name="perYear">Per Year: $</string>
    <string name="perCategory">Per Category:</string>

    <string name="today">Today</string>
    <string name="week">7 Days</string>
    <string name="month">Month</string>
    <string name="halfYear">Half year</string>
    <string name="year">Year</string>
    <string name="allTime">All time</string>

    <string name="noTransError">You must add transactions to view statistics.</string>

    <string name="creditLbl">Credit:</string>
    <string name="debitLbl">Debit:</string>

    <string name="day">day</string>

    <string name="currencySign">$</string>

</resources>
