<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="#ffb2b4aa">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:background="#7cfff8f2"
        android:id="@+id/linearLayout">

    <EditText
        android:layout_width="@dimen/text_field_width"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:singleLine="true"
        android:layout_marginBottom="10dp"
        android:background="@color/background_material_light"
        android:hint="@string/nameLabel"/>

    <EditText
        android:layout_width="@dimen/text_field_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_marginBottom="10dp"
        android:hint="@string/passwordLabel"
        android:background="@color/background_material_light"/>

    <EditText
        android:layout_width="@dimen/text_field_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/editTextRepeatPassword"
        android:hint="@string/repeatPasswordLabel"
        android:background="@color/background_material_light"/>

    <EditText
        android:layout_width="@dimen/text_field_width"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="@string/emailLabel"
        android:layout_marginBottom="10dp"
        android:background="@color/background_material_light"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/login"
            android:id="@+id/buttonLogin"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:background="#c9fffeef"
            android:onClick="onLoginPressed"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/create"
            android:id="@+id/buttonCreate"
            android:layout_margin="5dp"
            android:background="#c9fffeef"
            android:onClick="onCreatePressed"/>
    </LinearLayout>

</LinearLayout>
</RelativeLayout>