<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center"
    android:background="#ffb2b4aa">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="#7cfff8f2">

    <Spinner
        android:layout_width="@dimen/spinner_width"
        android:layout_height="@dimen/spinner_height"
        android:id="@+id/spinnerCategory"
        android:layout_column="1"
        android:layout_marginBottom="10dp"
        android:background="#7cfff8f2"
        />

    <EditText
        android:layout_width="@dimen/text_field_width"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:singleLine="true"
        android:id="@+id/editTextDesc"
        android:hint="@string/desc"
        android:layout_marginBottom="10dp"
        android:background="#99ffffff" />

    <EditText
        android:layout_width="@dimen/text_field_width"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextAmount"
        android:hint="@string/amt"
        android:layout_marginBottom="10dp"
        android:background="#99ffffff" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:layout_marginBottom="10dp"
        android:background="#99ffffff"
        android:calendarViewShown="false"
        android:elevation="5dp" />

    <Spinner
        android:layout_width="@dimen/spinner_width"
        android:layout_height="@dimen/spinner_height"
        android:id="@+id/spinnerRecurring"
        android:layout_column="1"
        android:layout_marginBottom="10dp"
        android:background="#7cfff8f2"
        />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/create"
        android:id="@+id/buttonCreateTrans"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:onClick="onCreateTransPressed"
        android:background="#c9fffeef" />


</LinearLayout>
</RelativeLayout>